--- a/index.html
+++ b/index.html
@@ -325,7 +325,9 @@ We enable progressive businesses to transform, scale and gain competitive advant
     </div>
 
   </div>
-</section><!-- End Portfolio Section -->
+</section>
+
+<!-- End Portfolio Section -->
 
     <!-- ======= F.A.Q Section ======= -->
     <section id="faq" class="faq section-bg">
