--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
-          <img src="assets/img/hero-img.svg" class="img-fluid animated" alt="">
+          <img src="assets/img/team/student.jpeg" class="img-fluid animated" alt="">
         </div>
       </div>
     </div>
@@ -82,7 +82,7 @@
 
         <div class="row justify-content-between">
           <div class="col-lg-5 d-flex align-items-center justify-content-center about-img">
-            <img src="assets/img/about-img.svg" class="img-fluid" alt="" data-aos="zoom-in">
+            <img src="assets/img/team/team-2.jpg" class="img-fluid animated" alt="">
           </div>
           <div class="col-lg-6 pt-5 pt-lg-0">
             <h3 data-aos="fade-up">What We Do</h3>
