--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
-          <img src="assets/img/team/student.jpeg" class="img-fluid animated" alt="">
+          <img src="assets/img/team/Hero1.jpeg" class="img-fluid animated" alt="">
         </div>
       </div>
     </div>
@@ -82,7 +82,7 @@
 
         <div class="row justify-content-between">
           <div class="col-lg-5 d-flex align-items-center justify-content-center about-img">
-            <img src="assets/img/team/team-2.jpg" class="img-fluid animated" alt="">
+            <img src="assets/img/team/Hero2.jpeg" class="img-fluid animated" alt="">
           </div>
           <div class="col-lg-6 pt-5 pt-lg-0">
             <h3 data-aos="fade-up">What We Do</h3>
@@ -198,9 +198,9 @@ We enable progressive businesses to transform, scale and gain competitive advant
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-app">
         <div class="portfolio-wrap">
-          <img src="assets/img/portfolio/app3.jpeg" class="img-fluid" alt="">
+          <img src="assets/img/portfolio/data4.jpeg" class="img-fluid" alt="">
           <div class="portfolio-links">
-            <a href="assets/img/portfolio/app3.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bi bi-plus"></i></a>
+            <a href="assets/img/portfolio/data4.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bi bi-plus"></i></a>
             <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
           </div>
           <div class="portfolio-info">
@@ -567,7 +567,8 @@ We enable progressive businesses to transform, scale and gain competitive advant
     </section> -->
     <!-- End Contact Us Section
 
-  </main><!-- End #main -->
+  </main>
+  <!-- End #main -->
   <footer id="footer">
 
     <div class="footer-newsletter">
