--- a/portfolio.html
+++ b/portfolio.html
@@ -58,159 +58,160 @@
 
 
  <!-- ======= Portfolio Section ======= -->
- <section id="portfolio" class="portfolio">
-  <div class="container" data-aos="fade-up">
-
-    <div class="section-title">
-      <h2>Portfolio</h2>
-      <p>Check out our beautifull portfolio</p>
+  <!-- ======= Portfolio Section ======= -->
+  <section id="portfolio" class="portfolio">
+    <div class="container" data-aos="fade-up">
+  
+      <div class="section-title">
+        <h2>Portfolio</h2>
+        <p>Check out our beautifull portfolio</p>
+      </div>
+  
+      <div class="row" data-aos="fade-up" data-aos-delay="100">
+        <div class="col-lg-12">
+          <ul id="portfolio-flters">
+            <li data-filter="*" class="filter-active">All</li>
+            <li data-filter=".filter-app">Mobile App</li>
+            <li data-filter=".filter-card">Web App</li>
+            <li data-filter=".filter-web">Branding</li>
+          </ul>
+        </div>
+      </div>
+  
+      <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+  
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/data4.jpeg" class="img-fluid" alt="">
+            <div class="portfolio-links">
+              <a href="assets/img/portfolio/data4.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bi bi-plus"></i></a>
+              <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+            </div>
+            <div class="portfolio-info">
+              <h4>App 1</h4>
+              <p>App</p>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/web3.jpeg" class="img-fluid" alt="">
+            <div class="portfolio-links">
+              <a href="assets/img/portfolio/web3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bi bi-plus"></i></a>
+              <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+            </div>
+            <div class="portfolio-info">
+              <h4>Web 3</h4>
+              <p>Web</p>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/app4.jpeg" class="img-fluid" alt="">
+            <div class="portfolio-links">
+              <a href="assets/img/portfolio/app4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bi bi-plus"></i></a>
+              <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+            </div>
+            <div class="portfolio-info">
+              <h4>App 2</h4>
+              <p>App</p>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/data2.jpeg" class="img-fluid" alt="">
+            <div class="portfolio-links">
+              <a href="assets/img/portfolio/data2.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bi bi-plus"></i></a>
+              <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+            </div>
+            <div class="portfolio-info">
+              <h4>Card 2</h4>
+              <p>Card</p>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/web2.jpeg" class="img-fluid" alt="">
+            <div class="portfolio-links">
+              <a href="assets/img/portfolio/web2.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bi bi-plus"></i></a>
+              <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+            </div>
+            <div class="portfolio-info">
+              <h4>Web 2</h4>
+              <p>Web</p>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/app2.jpeg" class="img-fluid" alt="">
+            <div class="portfolio-links">
+              <a href="assets/img/portfolio/app2.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bi bi-plus"></i></a>
+              <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+            </div>
+            <div class="portfolio-info">
+              <h4>App 3</h4>
+              <p>App</p>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/app1.jpeg" class="img-fluid" alt="">
+            <div class="portfolio-links">
+              <a href="assets/img/portfolio/app1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bi bi-plus"></i></a>
+              <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+            </div>
+            <div class="portfolio-info">
+              <h4>Card 1</h4>
+              <p>Card</p>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="portfolio-w`rap">
+            <img src="assets/img/portfolio/data1.jpeg" class="img-fluid" alt="">
+            <div class="portfolio-links">
+              <a href="assets/img/portfolio/data1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bi bi-plus"></i></a>
+              <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+            </div>
+            <div class="portfolio-info">
+              <h4>Card 3</h4>
+              <p>Card</p>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/web1.jpeg" class="img-fluid" alt="">
+            <div class="portfolio-links">
+              <a href="assets/img/portfolio/web1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bi bi-plus"></i></a>
+              <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+            </div>
+            <div class="portfolio-info">
+              <h4>Web 3</h4>
+              <p>Web</p>
+            </div>
+          </div>
+        </div>
+  
+      </div>
+  
     </div>
-
-    <div class="row" data-aos="fade-up" data-aos-delay="100">
-      <div class="col-lg-12">
-        <ul id="portfolio-flters">
-          <li data-filter="*" class="filter-active">All</li>
-          <li data-filter=".filter-app">Mobile App</li>
-          <li data-filter=".filter-card">Web App</li>
-          <li data-filter=".filter-web">Branding</li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-
-      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-        <div class="portfolio-wrap">
-          <img src="assets/img/portfolio/app3.jpeg" class="img-fluid" alt="">
-          <div class="portfolio-links">
-            <a href="assets/img/portfolio/app3.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bi bi-plus"></i></a>
-            <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
-          </div>
-          <div class="portfolio-info">
-            <h4>App 1</h4>
-            <p>App</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-        <div class="portfolio-wrap">
-          <img src="assets/img/portfolio/web3.jpeg" class="img-fluid" alt="">
-          <div class="portfolio-links">
-            <a href="assets/img/portfolio/web3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bi bi-plus"></i></a>
-            <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
-          </div>
-          <div class="portfolio-info">
-            <h4>Web 3</h4>
-            <p>Web</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-        <div class="portfolio-wrap">
-          <img src="assets/img/portfolio/app4.jpeg" class="img-fluid" alt="">
-          <div class="portfolio-links">
-            <a href="assets/img/portfolio/app4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bi bi-plus"></i></a>
-            <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
-          </div>
-          <div class="portfolio-info">
-            <h4>App 2</h4>
-            <p>App</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-        <div class="portfolio-wrap">
-          <img src="assets/img/portfolio/data2.jpeg" class="img-fluid" alt="">
-          <div class="portfolio-links">
-            <a href="assets/img/portfolio/data2.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bi bi-plus"></i></a>
-            <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
-          </div>
-          <div class="portfolio-info">
-            <h4>Card 2</h4>
-            <p>Card</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-        <div class="portfolio-wrap">
-          <img src="assets/img/portfolio/web2.jpeg" class="img-fluid" alt="">
-          <div class="portfolio-links">
-            <a href="assets/img/portfolio/web2.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bi bi-plus"></i></a>
-            <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
-          </div>
-          <div class="portfolio-info">
-            <h4>Web 2</h4>
-            <p>Web</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-        <div class="portfolio-wrap">
-          <img src="assets/img/portfolio/app2.jpeg" class="img-fluid" alt="">
-          <div class="portfolio-links">
-            <a href="assets/img/portfolio/app2.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bi bi-plus"></i></a>
-            <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
-          </div>
-          <div class="portfolio-info">
-            <h4>App 3</h4>
-            <p>App</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-        <div class="portfolio-wrap">
-          <img src="assets/img/portfolio/app1.jpeg" class="img-fluid" alt="">
-          <div class="portfolio-links">
-            <a href="assets/img/portfolio/app1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bi bi-plus"></i></a>
-            <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
-          </div>
-          <div class="portfolio-info">
-            <h4>Card 1</h4>
-            <p>Card</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-        <div class="portfolio-wrap">
-          <img src="assets/img/portfolio/data1.jpeg" class="img-fluid" alt="">
-          <div class="portfolio-links">
-            <a href="assets/img/portfolio/data1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bi bi-plus"></i></a>
-            <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
-          </div>
-          <div class="portfolio-info">
-            <h4>Card 3</h4>
-            <p>Card</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-        <div class="portfolio-wrap">
-          <img src="assets/img/portfolio/web1.jpeg" class="img-fluid" alt="">
-          <div class="portfolio-links">
-            <a href="assets/img/portfolio/web1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bi bi-plus"></i></a>
-            <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
-          </div>
-          <div class="portfolio-info">
-            <h4>Web 3</h4>
-            <p>Web</p>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
-  </div>
-</section>
-
-<!-- End Portfolio Section -->
+  </section>
+  
+  
 
 
 
